@@ -13,6 +13,7 @@
 * Fix - Fill missing order_intent_info even if an exception occurs.
 * Add - Gutenberg Block Widget for Multi-Currency.
 * Update - WCPay logo
+* Fix - Translations in transaction/deposit exports
 * Fix - Update shipping cost in payment sheet when changing payment method.
 
 = 3.0.0 - 2021-09-16 =
